@@ -105,7 +105,28 @@ int __cdecl _flush (FILE *str)
 
 int fseeko64 (FILE* stream, _off64_t offset, int whence)
 {
-  return _fseeki64(stream,offset,whence);
+  fpos_t pos;
+  if (whence == SEEK_CUR)
+    {
+      /* If stream is invalid, fgetpos sets errno. */
+      if (fgetpos (stream, &pos))
+        return (-1);
+      pos += (fpos_t) offset;
+    }
+  else if (whence == SEEK_END)
+    {
+      /* If writing, we need to flush before getting file length.  */
+      fflush (stream);
+      pos = (fpos_t) (_filelengthi64 (_fileno (stream)) + offset);
+    }
+  else if (whence == SEEK_SET)
+    pos = (fpos_t) offset;
+  else
+    {
+      errno = EINVAL;
+      return (-1);
+    }
+  return fsetpos (stream, &pos);
 }
 
 int __cdecl _fseeki64(FILE *str,__int64 offset,int whence)
